--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,16 +39,19 @@ input {
 
 button {
   background-color: rgb(35, 30, 218);
-  color: white;
+  color: #fff;
   border-radius: 0 5px 5px 0;
   border: none;
   padding: 10px 15px;
   font-size: 16px;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 button:hover {
   background-color: rgb(9, 5, 136);
+  color: #fafafa;
 }
 
 input:hover,
